--- a/src/app/widgets/subscribe/subscribe.component.html
+++ b/src/app/widgets/subscribe/subscribe.component.html
@@ -4,29 +4,54 @@
       <div class="row">
          <div class="col-sm-12 col-md-9 mx-auto text-center">
             <div class="mb-5">
-               <h2 class="font-2x text-white"> Assine nossos boletins </h2>
+               <h2 class="font-2x text-white"> Assine nossos informativos </h2>
             </div>
-            <form class="d-block" [formGroup] = "subscribe" (ngSubmit) = "subscribeNow()">
-   				<div class="form-row justify-content-center">
-   					<div class="form-group col-sm-12 col-md-6">
-                     <input type="email" class="form-control w-100 form-control-lg" placeholder=" Digite seu email" id="validationCustom01" formControlName = "email" required>
-                     <span class="has-icon"><i class="ion-ios-mail"></i></span>
-                     <div class="invalid-feedback">
-                        Por favor, forneça um e-mail válido.
+            <div [class.none]="type.value === '2'" class="mb-5">
+               <h5 class="font-1x text-white"> Entre no grupo de seleção para receber todas informações. </h5>
+               <span class="negrito">Grupo profissional onde moderadores colocam informações da agência de
+                  pagamento.</span>
+            </div>
+            <form class="d-block" [formGroup]="subscribe" (ngSubmit)="subscribeNow()">
+               <div class="form-row justify-content-center">
+                  <div class="form-group col-sm-12 col-md-2">
+                     <div class="input-group mb-1">
+                        <select #type id="tipo" class="form-control form-select-lg mb-3" (change)="alterarCanal()"
+                           formControlName="type" aria-label=".form-select-lg">
+                           <option value="1">Whatsapp</option>
+                           <option value="2">Email</option>
+                        </select>
                      </div>
-   					</div>
-   					<div class="form-group col-sm-12 col-md-3">
-   						<button type ="submit" [disabled]="!subscribe.valid" class="btn btn-dark btn-block btn-lg submit-btn"> Inscrever-se</button>
-   					</div>
-   				</div>
-               <div *ngIf="sendEmail" style="color: blue;" class="justify-content-center">
-                  <b>Email enviado com sucesso.</b>
+                  </div>
+                  <div *ngIf="type.value === '1'" class="form-group col-sm-12 col-md-6">
+                     <input id="mobile" type="text" class="form-control w-100 form-control-lg"
+                        placeholder=" Digite seu whatsapp" formControlName="mobile" required>
+                     <span style="font-size: 20px;" class="has-icon"><i class="bi bi-whatsapp"></i></span>
+                  </div>
+                  <div *ngIf="type.value === '2'" class="form-group col-sm-12 col-md-6">
+                     <input type="email" class="form-control w-100 form-control-lg" placeholder=" Digite seu email"
+                        id="email" formControlName="email" required>
+                     <span class="has-icon"><i class="ion-ios-mail"></i></span>
+                  </div>
+                  <div class="form-group col-sm-12 col-md-4">
+                     <button type="submit" class="btn btn-dark btn-block btn-lg submit-btn">{{labelButton}}</button>
+                  </div>
                </div>
-   			</form>
+               <div *ngIf="sendEmail" style="color: blue;" class="justify-content-center">
+                  <b>Contato enviado com sucesso.</b>
+               </div>
+               <div
+                  *ngIf="subscribe.controls['mobile'].errors && subscribe.controls['mobile'].touched"
+                  style="color: red;" class="justify-content-center">
+                  <b>Número inválido.</b>
+               </div>
+               <div
+                  *ngIf="subscribe.controls['email'].errors && subscribe.controls['email'].touched"
+                  style="color: red;" class="justify-content-center">
+                  <b>Email inválido.</b>
+               </div>
+            </form>
          </div>
       </div>
    </div>
 </div>
 <!-- Subscribe-section Closed -->
-
-
