retirada css tag video

--- a/src/app/more/more.component.html
+++ b/src/app/more/more.component.html
@@ -30,8 +30,7 @@
                                 </a>
                             </div>
                         </div>
-                        <video *ngIf="loadScreen" width="100%" playsinline style="pointer-events: none;"
-                            (ended)="apresentarOpcoesSelecao()" autoplay>
+                        <video *ngIf="loadScreen" width="100%" (ended)="apresentarOpcoesSelecao()" autoplay>
                             <source src="assets/video/app.mp4" type="video/mp4">
                         </video>
                     </div>
